k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-app-service
  labels:
    app: python
spec:
  selector:
    app: python
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
